env, theme, google

--- a/computer-use-demo/image/.streamlit/config.toml
+++ b/computer-use-demo/image/.streamlit/config.toml
@@ -4,3 +4,10 @@ runOnSave = true
 
 [browser]
 gatherUsageStats = false
+
+[theme]
+primaryColor="#4361ee"
+backgroundColor="#f8f9fa"
+secondaryBackgroundColor="#e9ecef"
+textColor="#212529"
+font="sans serif"
