test plan generation + spreadsheet

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 /venv
+computer-use-demo/computer_use_demo/.DS_Store
+computer-use-demo/computer_use_demo/tools/empatika-labs-sales-6fdb147f3722.json
