changed service account file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
 /venv
 computer-use-demo/computer_use_demo/.DS_Store
-computer-use-demo/computer_use_demo/tools/empatika-labs-sales-6fdb147f3722.json
+computer-use-demo/.DS_Store
+.DS_Store
+computer-use-demo/computer_use_demo/tools/empatika-labs-sales-20e446c8764d.json
